Closes #3 Project code setup

--- a/src/styles/_basics.scss
+++ b/src/styles/_basics.scss
@@ -1,1 +1,6 @@
-/*------------------------------------- Basic/global items -------------------------------------*/
+/*------------------ Basic/global items ------------------*/
+
+p {
+  color: $colour-highlight;
+  background-color: $colour-base-dark;
+}
