--- a/src/styles/_extend.scss
+++ b/src/styles/_extend.scss
@@ -1,4 +1,4 @@
-/*------------------------------------- Extensions -------------------------------------*/
+/*------------------ Extensions ------------------*/
 
 %flex-row-center {
   display: flex;
