--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,4 @@
-/*------------------------------------- Mixins -------------------------------------*/
+/*------------------ Mixins ------------------*/
 
 // Media queries
 @mixin screen($size, $minmax: max, $breakpoint: $breakpoint-large) {
