--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,5 @@
-/*------------------------------------- Variables -------------------------------------*/
+/*------------------ Variables ------------------*/
+
+$colour-base-dark: #252c30;
+$colour-base-light: #d7d8db;
+$colour-highlight: #e75940;
