--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -400,8 +400,8 @@ template {
   display: none;
 }
 
-/*------------------------------------- Variables -------------------------------------*/
-/*------------------------------------- Typography -------------------------------------*/
+/*------------------ Variables ------------------*/
+/*------------------ Typography ------------------*/
 /* Basic text size */
 html {
   background: white;
@@ -462,7 +462,11 @@ small,
   font-size: 0.694rem;
 }
 
-/*------------------------------------- Extensions -------------------------------------*/
-/*------------------------------------- Mixins -------------------------------------*/
-/*------------------------------------- Basic/global items -------------------------------------*/
+/*------------------ Extensions ------------------*/
+/*------------------ Mixins ------------------*/
+/*------------------ Basic/global items ------------------*/
+p {
+  color: #e75940;
+  background-color: #252c30;
+}
 /*# sourceMappingURL=styles.css.map */
