--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,4 @@
-//------------------------------------- Importing all SCSS files
+//------------------ Importing all SCSS files
 // Third party standardisation collections
 // In order to add further standardisation files, they must also be removed from gitignore
 @import 'standardisation/ESreset';
