--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,4 +1,4 @@
-/*------------------------------------- Typography -------------------------------------*/
+/*------------------ Typography ------------------*/
 
 $font-family-primary: Verdana,
 Geneva,
