Closes #6 Code mobile-first layout

--- a/src/styles/_basics.scss
+++ b/src/styles/_basics.scss
@@ -1,6 +1,6 @@
 /*------------------ Basic/global items ------------------*/
-
-p {
-  color: $colour-highlight;
-  background-color: $colour-base-dark;
+.center-flex-both {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
