Closes #7 Home: Clean up mobile layout

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -10,28 +10,11 @@
   transform: rotate(-90deg);
 }
 
-.home {
-  background-image: url("./../portfolio-bgr.gif");
-  background-repeat: no-repeat;
-  background-position: 40px 10px;
-  background-size: cover;
-}
-
-.hero {
-  padding: 0 60px;
-  border-top: solid 1px $colour-base-light;
-  height: calc(100vh - #{$header-height-with-gradient});
-
-  &-paragraph {
-    margin: 40px 0 30px;
-  }
-}
-
-// Add "buffer" element so link anchors don't get hidden behind the fixed header
+// Adding "buffer" element so link anchors don't get hidden behind the fixed header
 // Maximum support solution, whithout having to introduce empty spans
 #home::before,
-#projects::before,
-#about::before {
+#portfolio::before,
+#skillset::before {
   display: block;
   content: " ";
   margin-top: -$header-height-with-gradient;
@@ -43,9 +26,4 @@
 #home::before {
   margin-top: -($header-height-with-gradient+80px);
   height: ($header-height-with-gradient+80px);
-}
-
-//  temporary classes
-.x {
-  color: $colour-base-medium;
 }
