--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,14 +1,13 @@
 //------------------ Importing all SCSS files
-// Third party standardisation collections
-// In order to add further standardisation files, they must also be removed from gitignore
+/*------------------ Third-party standardisation ------------------*/
 @import 'standardisation/normalize';
 @import 'standardisation/ESreset';
-
-// Project-specific styles
-@import 'variables';
-@import 'typography';
-@import 'extend';
+/*------------------ Project-specific styles ------------------*/
 @import 'mixins';
+@import 'variables';
+@import 'extend';
 @import 'basics';
+@import 'typography';
 @import 'header';
 @import 'main';
+@import 'hero';
