--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,16 +2,19 @@
 
 // BREAKPOINTS - with viewport widths adopted from bootstrap
 
-// Extra small devices (portrait phones, less than 576px)
+// Extra small devices (small portrait phones)
 // (No media query since this is the default in mobile-first design)
 
-// Small devices (landscape phones, 576px and up)
-$breakpoint-small: 576px;
+// // Small devices (landscape phones)
+// $breakpoint-small: 576px;
 
-// Medium devices (tablets, 768px and up)
+// Small devices (larger phones)
+$breakpoint-small: 370px;
+
+// Medium devices (tablets)
 $breakpoint-medium: 768px;
 
-// Large devices (desktops, 992px and up)
+// Large devices (desktops)
 $breakpoint-large: 992px;
 
 // Extra large devices (large desktops, 1200px and up)
