--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,7 @@ $colour-highlight-2: #EFD43C;
 // charcoal logo #262626
 // charcoal writing #344648
 
+$padding-sides-small: 26px;
 $padding-sides: 34px;
 
 $header-padding-top: 40px;
