--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,21 +1,42 @@
 /*------------------ Hero ------------------*/
-.home {
-  background-image: url("./../Tanja-R-Portfolio-Watermark.svg");
-  background-color: $colour-base-light;
-  background-repeat: no-repeat;
-  background-position: 42px -20px;
-  background-size: auto calc(110vh - #{$header-height-with-gradient});
-}
-
 .hero {
-  padding: 0 calc(#{$padding-sides} + 8px);
-  border-top: solid 1px $colour-base-light;
-  height: calc(104vh - #{$header-height-with-gradient});
+  display: flex;
+  align-items: center;
+  // justify-content: center;
+  padding: 0 11%;
+  height: calc(100vh - #{$header-height-with-gradient});
+
+  // Adjust padding flexibly to keep headline in one line
+  @include screen(custom, min, 410px) {
+    padding: 0 15%;
+  }
+
+  @include screen(medium) {
+    margin: 0 auto;
+    padding: 0 20%;
+  }
+
+  @include screen(custom, min, 1400px) {
+    padding: 0 30%;
+  }
 
   &-paragraph {
-    margin: 40px 10px 30px 0;
-    font-size: $text-h5;
+    margin: 20px 10px 25px 0;
     line-height: 1.5em;
-    width: 19rem;
+
+    @include screen(small) {
+      margin: 35px 10px 30px 0;
+      max-width: 19em;
+    }
+
+    @include screen(medium) {
+      margin-bottom: 50px;
+      max-width: 20em;
+    }
   }
+
+  &-welcome {
+    padding-bottom: 25%;
+  }
+
 }
