--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -427,6 +427,30 @@ html {
   color: #354648;
 }
 
+.huge {
+  font-family: Hind, Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 2.3rem;
+  margin: 0 0 .3em;
+}
+
+@media only screen and (min-width: 370px) {
+  .huge {
+    font-size: 2.76rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .huge {
+    font-size: 2.99rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .huge {
+    font-size: 3.45rem;
+  }
+}
+
 h1,
 h2,
 h3,
@@ -441,25 +465,120 @@ h6 {
 }
 
 h1 {
-  font-size: 2.5rem;
-  margin-top: 36px;
+  font-size: 1.8rem;
+  margin-top: 24px;
+}
+
+@media only screen and (min-width: 370px) {
+  h1 {
+    font-size: 2.16rem;
+    margin-top: 36px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 2.34rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  h1 {
+    font-size: 2.7rem;
+  }
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
+}
+
+@media only screen and (min-width: 370px) {
+  h2 {
+    font-size: 1.8rem;
+    margin-top: 36px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  h2 {
+    font-size: 1.95rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  h2 {
+    font-size: 2.25rem;
+  }
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: 1.35rem;
+}
+
+@media only screen and (min-width: 370px) {
+  h3 {
+    font-size: 1.62rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  h3 {
+    font-size: 1.755rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  h3 {
+    font-size: 2.025rem;
+  }
 }
 
 h4 {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
+}
+
+@media only screen and (min-width: 370px) {
+  h4 {
+    font-size: 1.44rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  h4 {
+    font-size: 1.56rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  h4 {
+    font-size: 1.8rem;
+  }
 }
 
 h5,
 h6 {
-  font-size: 1.12rem;
+  font-size: 1.1rem;
+}
+
+@media only screen and (min-width: 370px) {
+  h5,
+  h6 {
+    font-size: 1.32rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  h5,
+  h6 {
+    font-size: 1.43rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  h5,
+  h6 {
+    font-size: 1.65rem;
+  }
 }
 
 p {
@@ -468,10 +587,22 @@ p {
   margin-bottom: .8em;
 }
 
-.huge {
-  font-family: Hind, Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 3.1rem;
-  margin: 1em 0 .3em;
+@media only screen and (min-width: 370px) {
+  p {
+    font-size: 1.05rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  p {
+    font-size: 1.15rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  p {
+    font-size: 1.25rem;
+  }
 }
 
 .subheading1,
@@ -483,19 +614,91 @@ p {
 }
 
 .subheading1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
+}
+
+@media only screen and (min-width: 370px) {
+  .subheading1 {
+    font-size: 1.8rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .subheading1 {
+    font-size: 1.95rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .subheading1 {
+    font-size: 2.25rem;
+  }
 }
 
 .subheading2 {
-  font-size: 1.75rem;
+  font-size: 1.35rem;
+}
+
+@media only screen and (min-width: 370px) {
+  .subheading2 {
+    font-size: 1.62rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .subheading2 {
+    font-size: 1.755rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .subheading2 {
+    font-size: 2.025rem;
+  }
 }
 
 .subheading3 {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
+}
+
+@media only screen and (min-width: 370px) {
+  .subheading3 {
+    font-size: 1.44rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .subheading3 {
+    font-size: 1.56rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .subheading3 {
+    font-size: 1.8rem;
+  }
 }
 
 .subheading4 {
-  font-size: 1.12rem;
+  font-size: 1.1rem;
+}
+
+@media only screen and (min-width: 370px) {
+  .subheading4 {
+    font-size: 1.32rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .subheading4 {
+    font-size: 1.43rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .subheading4 {
+    font-size: 1.65rem;
+  }
 }
 
 .text-small {
@@ -530,8 +733,29 @@ p {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 40px 34px 16px;
+  padding: 40px 26px 16px;
   background-color: #ffffff;
+}
+
+@media only screen and (min-width: 370px) {
+  .header-container {
+    padding: 40px 34px 16px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .header-container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: transparent;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .header-container {
+    padding: 50px 44px 16px;
+  }
 }
 
 .header-logo {
@@ -543,6 +767,12 @@ p {
   height: 40px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(rgba(255, 255, 255, 0)));
   background-image: linear-gradient(#ffffff, rgba(255, 255, 255, 0));
+}
+
+@media only screen and (min-width: 768px) {
+  .header-gradient {
+    background-image: none;
+  }
 }
 
 .navigation {
@@ -559,6 +789,21 @@ p {
   height: 81px;
 }
 
+@media only screen and (min-width: 768px) {
+  .navigation {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .navigation-button {
   display: block;
   padding: 15px 28px 12px;
@@ -566,6 +811,13 @@ p {
   background-color: #f3766f;
   color: #ffffff;
   font-weight: bold;
+  white-space: nowrap;
+}
+
+@media only screen and (min-width: 768px) {
+  .navigation-button {
+    margin-left: 20px;
+  }
 }
 
 .navigation-links {
@@ -585,17 +837,69 @@ p {
   width: 100%;
 }
 
+@media only screen and (min-width: 768px) {
+  .navigation-links-item {
+    padding: 20px;
+    margin-right: 10px;
+  }
+}
+
 /*------------------ Main ------------------*/
 .main {
+  background-image: url("./../Tanja-R-Portfolio-Watermark.svg");
+  background-color: #ffffff;
+  background-position: 42px calc(136px - 10px);
+  background-size: auto calc(110vh - 136px);
+  background-repeat: no-repeat;
   padding-top: 176px;
+}
+
+@media only screen and (min-width: 370px) {
+  .main {
+    background-position: 60px 136px;
+    background-size: auto calc(106vh - 136px);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .main {
+    background-position: 140px 136px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .main {
+    background-position: 33vw -10vh;
+    background-size: auto 125vh;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .main {
+    background-position: 36vw -10vh;
+    background-size: auto 125vh;
+  }
+}
+
+@media only screen and (min-width: 1800px) {
+  .main {
+    background-position: 39vw -10vh;
+    background-size: auto 130vh;
+  }
 }
 
 .scroll-teaser {
   position: fixed;
-  bottom: 30px;
+  bottom: 25px;
   left: calc(50% - 1em);
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
+}
+
+@media only screen and (min-width: 768px) {
+  .scroll-teaser {
+    bottom: 30px;
+  }
 }
 
 #home::before,
@@ -610,29 +914,61 @@ p {
 }
 
 #home::before {
-  margin-top: -256px;
-  height: 256px;
+  margin-top: -236px;
+  height: 236px;
 }
 
 /*------------------ Hero ------------------*/
-.home {
-  background-image: url("./../Tanja-R-Portfolio-Watermark.svg");
-  background-color: #ffffff;
-  background-repeat: no-repeat;
-  background-position: 42px -20px;
-  background-size: auto calc(110vh - 176px);
+.hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 11%;
+  height: calc(100vh - 176px);
 }
 
-.hero {
-  padding: 0 calc(34px + 8px);
-  border-top: solid 1px #ffffff;
-  height: calc(104vh - 176px);
+@media only screen and (min-width: 410px) {
+  .hero {
+    padding: 0 15%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .hero {
+    margin: 0 auto;
+    padding: 0 20%;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .hero {
+    padding: 0 30%;
+  }
 }
 
 .hero-paragraph {
-  margin: 40px 10px 30px 0;
-  font-size: 1.12rem;
+  margin: 20px 10px 25px 0;
   line-height: 1.5em;
-  width: 19rem;
+}
+
+@media only screen and (min-width: 370px) {
+  .hero-paragraph {
+    margin: 35px 10px 30px 0;
+    max-width: 19em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-paragraph {
+    margin-bottom: 50px;
+    max-width: 20em;
+  }
+}
+
+.hero-welcome {
+  padding-bottom: 25%;
 }
 /*# sourceMappingURL=styles.css.map */
