--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,13 +1,11 @@
 /*------------------ Variables ------------------*/
 
 $colour-base-dark: #354648;
-$colour-base-medium: #95adaf;
-$colour-base-medium-light: #D7E6E8;
+$colour-base-medium: #748B93;
+$colour-base-medium-light: #cee0e2;
 $colour-base-light: #ffffff;
-// $colour-highlight-1: #EE766C;
 $colour-highlight-1: #f3766f;
-// $colour-highlight-1: #ec542e;
-$colour-highlight-2: #EFD43C;
+$colour-highlight-2: #ffe553;
 
 // background logo watermark #e7ecf6
 // salmon colour #f3766f
